--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,13 @@ mark {
 	font-size: 3.6rem;
 }
 
+#homepage-second-section{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
 /* Mobile screens */
 @media (max-width: 730px) {
 	#first-section-text > pre{
