--- a/styles.css
+++ b/styles.css
@@ -86,15 +86,18 @@ mark {
 
 #homepage-second-section, #homepage-third-section{
 	width: 100%;
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	margin-top: 50px;
 }
+#homepage-third-section{
+	padding: 50px 0 50px 0;
+	position: relative;
+}
 #second-section-yellow-box{
 	height: 100px; width: 500px; background-color: var(--main-color);position: absolute;z-index: -1;
 }
-#second-section-pre{
+#second-section-text-div{
 	font-size: 2rem; font-weight: 200; line-height:2;
 }
 
@@ -105,12 +108,13 @@ mark {
 	height: 550px;
 	position: absolute;
 	right: 0;
+	top: 0;
 	z-index: -1;
 }
 
 #third-section-glass-div{
-	width: 700px;
-	/* background-color: rgb(244, 244, 244, 0.5); */
+	max-width: 600px;
+	overflow-wrap: break-word;
 	background: linear-gradient(90deg,rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0.5) 70%, rgba(243, 255, 83, 1) 100%);
 	border-radius: 16px;
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -118,10 +122,6 @@ mark {
 	-webkit-backdrop-filter: blur(5px);
 	text-align: justify;
 	padding: 50px;
-}
-
-#third-section-glass-div > pre{
-	font-size: 3rem;
 }
 
 input[type="button"]{
@@ -137,6 +137,10 @@ input[type="button"]{
 input[type="button"]:hover{
 	filter: invert(100%);
 }
+#third-section-glass-div > div{
+	text-align: left; font-size: 3rem;
+}
+
 
 /* Mobile screens */
 @media (max-width: 730px) {
@@ -175,14 +179,22 @@ input[type="button"]:hover{
 	#second-section-yellow-box{
 		width: 70%;
 	}
-	#second-section-pre{
+	#second-section-text-div{
 		font-size: 1.3rem; 
 	}
-	#third-section-image, #third-section-glass-div{
+	#third-section-image{
 		width: 100%;
-		overflow: hidden;
+		position: static;
 	}
-	/* #third-section-glass-div > pre{
-		font-size: 1rem;
-	} */
+	#third-section-glass-div{
+		margin: 20px;
+		font-size: 0.9rem;
+		padding: 25px;
+	}
+	#third-section-glass-div > div{
+		font-size: 1.5rem;
+	}
+	#homepage-second-section{
+		font-size: 0.9rem;
+	}
 }
