--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ mark {
 	justify-content: center;
 	align-items: center;
 	padding: 50px;
+	font-size: 3.6rem;
 }
 
 #home-page-first-section-image {
@@ -78,10 +79,6 @@ mark {
     background-image: url(./assets/images/home-page-image-1.jpg);
     background-position: right;
     background-size: cover;
-}
-
-#first-section-text > pre{
-	font-size: 3.6rem;
 }
 
 #homepage-second-section, #homepage-third-section{
@@ -144,7 +141,7 @@ input[type="button"]:hover{
 
 /* Mobile screens */
 @media (max-width: 730px) {
-	#first-section-text > pre{
+	#first-section-text{
 		font-size: 2rem;
 	}
 
