--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,41 @@ a {
 	cursor: pointer;
 }
 
+#contact-modal{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(255, 255, 255, 0.9);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: 300ms;
+}
+
+#contact-modal a{
+	text-decoration: underline;
+}
+
+.logo-div{
+	background-size: contain; height: 40px; width: 40px; background-position: center; background-repeat: no-repeat; margin: 10px;
+	cursor: pointer;
+}
+
+#close-contact-modal-button{
+	background-image: url("./assets/images/close.svg");
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	margin-left: calc(100% - 100px);
+	margin-top: -30px;
+	cursor: pointer;
+}
+a.contact-link{
+	cursor: pointer;
+}
+
 /* Mobile screens */
 @media (max-width: 730px) {
 	#first-section-text {
