--- a/styles.css
+++ b/styles.css
@@ -269,10 +269,11 @@ a {
 	width: 100vw;
 	height: 100vh;
 	background-color: rgba(255, 255, 255, 0.9);
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	transition: 300ms;
+	opacity: 0;
 }
 
 #contact-modal a{
