Designed the style of post contents

--- a/styles.css
+++ b/styles.css
@@ -136,8 +136,12 @@ input[type="button"]:hover {
 	text-align: left;
 	font-size: 3rem;
 }
-a {
+.navbar a {
 	text-decoration: none;
+	color: black;
+}
+
+a{
 	color: black;
 }
 
@@ -323,6 +327,21 @@ a.contact-link{
 	flex-direction: column;
 	justify-content: center;
 	max-width: 450px;
+}
+
+.post-content{
+	max-width: 800px;
+	border: 1px solid var(--navbar-background);
+	margin-top: 50px;
+	margin-bottom: 50px;
+	padding: 50px;
+}
+.post-title{
+	font-size: 32px;font-weight: 300;
+}
+.code{
+	padding: 20px;
+	width: 100%;
 }
 
 /* Mobile screens */
