--- a/styles.css
+++ b/styles.css
@@ -183,9 +183,14 @@ a{
 	cursor: pointer;
 }
 .app-div-icon {
-	width: 250px;
-	height: 250px;
-	background-size: cover;
+	width: 200px;
+	height: 200px;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+	border-radius: 50px;
+	margin: 20px;
 }
 .project-title {
 	font-weight: 700;
