--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ input[type="button"]:hover {
 	text-align: left;
 	font-size: 3rem;
 }
-.navbar a {
+.navbar a, #mobile-menu-modal a {
 	text-decoration: none;
 	color: black;
 }
@@ -286,10 +286,6 @@ a{
 	opacity: 0;
 }
 
-#contact-modal a{
-	text-decoration: underline;
-}
-
 .logo-div{
 	background-size: contain; height: 40px; width: 40px; background-position: center; background-repeat: no-repeat; margin: 10px;
 	cursor: pointer;
@@ -350,14 +346,43 @@ a.contact-link{
 	width: 100%;
 }
 
+#mobile-menu-modal{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #fff;
+	height: 0;
+	transition: 300ms;
+	overflow: hidden;
+	position: absolute;
+	width: 100vw;
+}
+
+#mobile-menu-modal.open{
+	height: 225px;
+	box-shadow: 0px 49px 25px -32px rgba(0,0,0,0.1);
+}
+
+#navbar-right-section.inverted{
+	filter: invert(100%);
+}
+
 /* Mobile screens */
 @media (max-width: 730px) {
 	#first-section-text {
 		font-size: 2rem;
 	}
 
-	#navbar-right-section {
+	#navbar-right-section a{
 		display: none;
+	}
+
+	#navbar-right-section{
+		width: 50px;
+		height: 50px;
+		background-image: url('/assets/images/menu-icon.svg');
+		filter: invert(0%);
+		transition: 300ms;
 	}
 
 	.navbar > * {
