--- a/styles.css
+++ b/styles.css
@@ -136,12 +136,13 @@ input[type="button"]:hover {
 	text-align: left;
 	font-size: 3rem;
 }
-.navbar a, #mobile-menu-modal a {
+.navbar a,
+#mobile-menu-modal a {
 	text-decoration: none;
 	color: black;
 }
 
-a{
+a {
 	color: black;
 }
 
@@ -160,7 +161,7 @@ a{
 	flex-direction: column;
 	width: 25%;
 }
-.platform-div img{
+.platform-div img {
 	max-height: 320px;
 }
 
@@ -224,16 +225,15 @@ a{
 .project-header-div {
 	display: flex;
 	padding: 50px;
-	
 }
-.project-gallery-div{
+.project-gallery-div {
 	display: flex;
 	justify-content: flex-start;
 	align-items: flex-start;
 	flex-wrap: nowrap;
 	overflow: scroll;
 }
-.project-gallery-div > img{
+.project-gallery-div > img {
 	margin: 5px;
 	height: 50vh;
 	width: auto;
@@ -243,11 +243,11 @@ a{
 	cursor: pointer;
 }
 
-.project-gallery-div > img:hover{
+.project-gallery-div > img:hover {
 	background-color: rgba(0, 0, 0, 0.2);
 }
 
-.fullscreen-gallery-div{
+.fullscreen-gallery-div {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -260,7 +260,7 @@ a{
 	display: none;
 }
 
-.fullscreen-image{
+.fullscreen-image {
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -268,7 +268,7 @@ a{
 	height: 100vh;
 }
 
-#close-fullscreen-button{
+#close-fullscreen-button {
 	position: fixed;
 	right: 50px;
 	top: 50px;
@@ -276,7 +276,7 @@ a{
 	cursor: pointer;
 }
 
-#contact-modal{
+#contact-modal {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -290,12 +290,17 @@ a{
 	opacity: 0;
 }
 
-.logo-div{
-	background-size: contain; height: 40px; width: 40px; background-position: center; background-repeat: no-repeat; margin: 10px;
+.logo-div {
+	background-size: contain;
+	height: 40px;
+	width: 40px;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin: 10px;
 	cursor: pointer;
 }
 
-#close-contact-modal-button{
+#close-contact-modal-button {
 	background-image: url("/assets/images/close.svg");
 	width: 30px;
 	height: 30px;
@@ -304,14 +309,18 @@ a{
 	margin-top: -30px;
 	cursor: pointer;
 }
-a.contact-link{
+a.contact-link {
 	cursor: pointer;
 }
 
-.posts-container{
-	width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;
+.posts-container {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
-.post-link{
+.post-link {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -321,7 +330,7 @@ a.contact-link{
 	cursor: pointer;
 }
 
-.post-thumbnail{
+.post-thumbnail {
 	background-size: contain;
 	width: 300px;
 	height: 300px;
@@ -329,29 +338,29 @@ a.contact-link{
 	background-repeat: no-repeat;
 }
 
-.post-link-text{
+.post-link-text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	max-width: 450px;
 }
 
-.post-content{
+.post-content {
 	max-width: 800px;
-	border: 1px solid var(--navbar-background);
 	margin-top: 50px;
 	margin-bottom: 50px;
 	padding: 50px;
 }
-.post-title{
-	font-size: 32px;font-weight: 300;
+.post-title {
+	font-size: 32px;
+	font-weight: 300;
 }
-.code{
+.code {
 	padding: 20px;
 	width: 100%;
 }
 
-#mobile-menu-modal{
+#mobile-menu-modal {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -363,74 +372,95 @@ a.contact-link{
 	width: 100vw;
 }
 
-#mobile-menu-modal.open{
+#mobile-menu-modal.open {
 	height: 225px;
-	box-shadow: 0px 49px 25px -32px rgba(0,0,0,0.1);
+	box-shadow: 0px 49px 25px -32px rgba(0, 0, 0, 0.1);
 }
 
-#navbar-right-section.inverted{
+#navbar-right-section.inverted {
 	filter: invert(100%);
 }
 
-#contact-modal-panel{
-	padding: 50px; background-color: white;border: 1px solid black; position: inherit;
+#contact-modal-panel {
+	padding: 50px;
+	background-color: white;
+	border: 1px solid black;
+	position: inherit;
 }
 
-.post-link-date{
-	font-style: italic; font-size: 12px; font-weight: 300;
-}
-
-.post-link-title{
-	font-size: 24px; margin: 10px 0 10px 0;
-}
-
-.post-link-details{
+.post-link-date {
+	font-style: italic;
+	font-size: 12px;
 	font-weight: 300;
 }
 
-.post-content img{
+.post-link-title {
+	font-size: 24px;
+	margin: 10px 0 10px 0;
+}
+
+.post-link-details {
+	font-weight: 300;
+}
+
+.post-content img {
 	max-width: 800px;
+	width: 100%;
+	border-radius: 1.625%;
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
+
+.window-ss {
+	border: 1px solid gray;
 }
 
 .scroll-container {
-  overflow-x: scroll;                /* Forces horizontal scrollbar */
-  overflow-y: hidden;               /* Optional: hides vertical scrollbar */
-  white-space: nowrap;              /* Keeps content on one line */
-  -webkit-overflow-scrolling: auto; /* Avoids momentum scrolling on macOS */
-  display: flex;
-  align-items: center;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+	-webkit-overflow-scrolling: auto;
+	display: flex;
+	align-items: center;
 }
 
 .scroll-container::-webkit-scrollbar {
-  height: 12px;                      /* Show horizontal scrollbar */
+	height: 12px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 6px;
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 6px;
 }
 
 /* Mobile screens */
 @media (max-width: 730px) {
-	.post-link{
+	.post-content {
+		max-width: 800px;
+		margin-top: 16px;
+		margin-bottom: 16px;
+		padding: 16px;
+	}
+	.post-link {
 		width: 90%;
 		padding: 10px;
 	}
 
-	.post-link-date{
+	.post-link-date {
 		font-size: 11px;
 	}
 
-	.post-link-title{
-		font-size: 16px; margin: 10px 0 10px 0;
+	.post-link-title {
+		font-size: 16px;
+		margin: 10px 0 10px 0;
 	}
-	
-	.post-link-details{
+
+	.post-link-details {
 		font-weight: 300;
 		font-size: 12px;
 	}
 
-	#contact-modal-panel{
+	#contact-modal-panel {
 		background-color: white;
 		border: none;
 	}
@@ -439,14 +469,14 @@ a.contact-link{
 		font-size: 2rem;
 	}
 
-	#navbar-right-section a{
+	#navbar-right-section a {
 		display: none;
 	}
 
-	#navbar-right-section{
+	#navbar-right-section {
 		width: 50px;
 		height: 50px;
-		background-image: url('/assets/images/menu-icon.svg');
+		background-image: url("/assets/images/menu-icon.svg");
 		filter: invert(0%);
 		transition: 300ms;
 	}
@@ -518,6 +548,5 @@ a.contact-link{
 	.project-header-div {
 		display: flex;
 		padding: 20px;
-		
 	}
 }
