--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
 	--main-color: rgb(243, 255, 83);
-	--navbar-background: rgb(244, 244, 244);
+	--navbar-background: rgb(255,255,255);
 }
 
 * {
